# django-check

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
example/testproject/: settings.py
hooks/: check_debug_mode.py  check_untracked_migrations.py  po_location_format.py  settings.py  utils.py  utils_django.py
tests/: check_untracked_migrations_test.py  conftest.py  test_check_debug_mode.py  test_po_location_format.py  utils.py
