[project]
name = "django-check"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandr Sapronov",email = "a@sapronov.me"},
    {name = "Ivan Vedernikov",email = "ecugol@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "django (>=4.2)"
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
coverage = "^7.10.6"
covdefaults = "^2.3.0"
ruff = "^0.12.11"
flake8 = "^7.3.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
